refactor: remove debug prints and add logging for todo updates